app/assets/stylesheets/app-elements/tables.scss
table {
  a {
    text-decoration: none;
  }

  .actions {
    text-align: right;

    a {
      margin: 0 2rem;
    }
  }

  /* Hide delete confirm actions by default */
  .actions-delete-wrapper {
    display: none;
  }

  /* Hide action links for rows we are not deleting */
  &.confirm-delete {
    .actions a {
      display: none;
    }

    /* And show the delete actions for the row we are deleting */
    .actions-delete {
      .actions-delete-wrapper {
        display: block;

        a, button {
          display: inline-block;
        }
      }
    }
  }

  .actions-delete-wrapper {
    background-color: $grey-3;
    margin: 0.5rem;
    padding: 0.25rem 1rem 1rem;
    max-width: 400px;
    float: right;

    a.link-cancel {
      text-decoration: underline;
      margin-left: 2rem;
    }
  }
}

td dd {
  margin-top: -2.25rem;
}

